text-block no longer gets cut off

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,7 +6,3 @@ html, body {
   margin: 0;
   overflow: hidden;
 }
-
-* {
-  border: 1px solid black;
-}
